@@ -1,4 +1,5 @@
 print <<DUMMY_TEST;
+TAP version 13
 1..5
 ok 1
 ok 2
