@@ -35,6 +35,9 @@ Revision history for TAP-Parser
     - Implemented YAML syntax. Currently YAML may only follow a
       test result. The first line of YAML is '---' and the last
       line is '...'.
+    - Made grammar version-aware. Different grammars may now be selected
+      depending on the TAP version being parsed.
+    - Added formatter delegate mechanism for test results.
 
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
